bad/incr_arr_elem_array.example_compiler_output
ERROR
[1mbad/incr_arr_elem_array.lat:4:19: [1;31merror: [0;1m++ operator is valid only for integer values not `int[]`[m
	(new int[][3])[1]++;
	                 [1;32m^[m
